--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ThePaleKing</title>
+    <title>Koni | Programmer</title>
     <link href="design.css" rel="stylesheet"/>
 </head>
 <body>
     <section class = "nav_section">
         <ul class = "nav-bar">
-         <li>
-            <a href = "#home">ThePaleKing</a>
+         <li class="icon">
+               <img class="skill_icon" src="Icons/koni.png" alt="koni" width="96" height="96">
          </li>
          <li>
             <a href = "#about">About</a>
@@ -24,5 +24,55 @@
  
         </ul>
     </section>
+   </section>
+    <section class="Home" id="home">
+      <p>
+         <span class="name">Koni</span>
+         <br>
+         game designer , programmer and software developer
+        </p>
+    </section>
+    <hr>
+    <h2>My Skills :</h2>
+    <p class="skill-text">Game Design
+      <br>
+      Games in Unity 2D,3D with C#
+      <br>
+      Games in Godot 2D,3D with gdscript
+      <br>
+      Implement Source Control
+      <br>
+      Do basic 3d Modeling and Texturing in Blender</p>
+
+    <section class="About" id="about">
+      <img class="skill_icon" src="Icons/blender-icon.svg" alt="blender-icon" width="32" height="32">
+      <img class="skill_icon"  src="Icons/git.svg" alt="source-control-icon" width="32" height="32">
+      <img class="skill_icon"  src="Icons/github.svg" alt="github-icon" width="32" height="32">
+      <img class="skill_icon"  src="Icons/unity.svg" alt="unity-icon" width="32" height="32">
+      <img class="skill_icon"  src="Icons/godot-game-engine-icon.svg" alt="godot-game-engine-icon" width="32" height="32">
+    </section>   
+    <hr> 
+    <h2>My Projects :</h2>
+    <hr>
+    <section class="Projects" id="projects">  
+     
+    </section>    
+    <h2>Contact me :</h2>
+    <section class="Contact" id="contact">  
+      <a href="mailto:ravyyn.1@gmail.com">
+         <img class="skill_icon" src="Icons/gmail-icon.svg" alt="gmail-icon" width="32" height="32" href="">
+      </a>  
+      <a href="https://discordapp.com/users/koni__1">   
+      <img class="skill_icon" src="Icons/discord-round-color-icon.svg" alt="discord-round-color-icon" width="32" height="32">
+      </a>
+      <a href="https://koniii.itch.io/"> 
+      <img class="skill_icon" src="Icons/itch-io.svg" alt="itch-io" width="32" height="32">
+   </a>
+   <a href="https://github.com/Koni-Timeless"> 
+      <img class="skill_icon" src="Icons/github.svg" alt="github-icon" width="32" height="32">
+   </a> 
+    </section>
+
 </body>
+
 </html>
